test/ddc-regress/source/01-tetra/21-Guards/01-InexhBindGuards/Main.runerror.check

DDC runtime error: inexhaustive case match.
 at: test/ddc-main/70-SourceTetra/21-Guards/01-InexhBindGuards/Main.ds:12
