test/ddc-regress/source/01-tetra/21-Guards/01-InexhBindGuards/Main.ds

module Main
import Data.Maybe
import Data.Function
import System.IO.Console
where


-- | The first guard is inexhaustive, and will cause a runtime
--   error if x /= 0.
derp (x: Nat#): Nat#
 | x == 0               = 10

main (_: Unit): S Console Unit
 = do
        writel $ showNat (derp 0)
        writel $ showNat (derp 1)

